syntax = "proto3";

package admin;
option go_package = "github.com/onflow/flow-go/admin/admin";

import "google/protobuf/struct.proto";

service Admin {
  // RunCommand sends a command to the admin server.
  rpc RunCommand(RunCommandRequest) returns (RunCommandResponse);
}

/* RunCommandRequest represents an admin command with arguments */
message RunCommandRequest {
  string commandName = 1;           // Name of the command to run
  google.protobuf.Struct data = 2;  // Arguments to pass to the command
}

message RunCommandResponse {}
